# argparse

./: .gitignore  Makefile.in  README.md  README.tmd  TODO.md  arbitaryTest.tcl  argparse.tcl  argparse.test  codeCoverage.tcl  configure  configure.ac  pkgIndex.tcl  pkgIndex.tcl.in  test.tcl
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docs/: README.tmd  argparse.html  argparse.n  argparse.ruff  doc_gen.tcl  genindex.html  index.html  objects.inv  search.html  searchindex.js
generic/: argparse.c  argparse.h
test/: all.tcl  all_codeCoverage.tcl  arbitaryTest.tcl  argparse.test  codeCoverage.tcl  cppcheck_misra.sh  nagelfarSyntaxBuild.tcl  performance_test.tcl  staticCheck.tcl  suppressions.txt  syntaxdb.tcl
win/: makefile.vc
